build using gitenberg.travis

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,5 @@
 _repo: Our-World-Or-the-Slaveholder-s-Daughter_4677
+_version: 0.1.0
 creator:
   author:
     agent_name: Adams, F. Colburn (Francis Colburn)
