tag: 0.2.1. Removed old files.

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: Our-World-Or-the-Slaveholder-s-Daughter_4677
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -28,5 +28,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'African Americans -- Fiction'
 - !lcsh 'Slaveholders -- Fiction'
+- GITenberg
 title: Our World; Or, the Slaveholder's Daughter
 url: http://www.gutenberg.org/ebooks/4677
